Added new changes

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,39 @@
-REACT_APP_URL=http://localhost:4500
+# REACT_APP_URL=http://localhost:4500
+
+
+# Register google client id .env
 REACT_APP_GOOGLE_CLIENT_ID=105221638566-rhgasqij89o7919eg3fscbcnoerrqvmn.apps.googleusercontent.com
-REACT_APP_GET_API=/get-all-products
+
+
+
+# products .env
+REACT_APP_GET_API=http://localhost:4500/getallproducts
+REACT_APP_ADD_API=http://localhost:4500/addproducts
+REACT_APP_DELETE_API=http://localhost:4500/deleteproducts/
+REACT_APP_UPDATE_API=http://localhost:4500/updateproducts/
+REACT_APP_GET_BY_ID_API=http://localhost:4500/getproductsbyid/
+REACT_APP_GET_PRO_BY_CATEGORY_API=http://localhost:4500/getproductsbycategory/
+
+
+# category .env
+REACT_APP_CATEGORY_API=http://localhost:4500/category
+REACT_APP_ADD_CATEGORY_API=http://localhost:4500/addcategory
+REACT_APP_DELETE_CATEGORY_API=http://localhost:4500/deletecategory
+REACT_APP_UPDATE_CATEGORY_API=http://localhost:4500/updatecategory
+REACT_APP_GET_CATEGORY_BY_ID_API=http://localhost:4500/getCategoryById/
+
+
+# Login .env
+REACT_APP_LOGIN_API=http://localhost:4500/login-user
+
+
+
+# Register .env
+REACT_APP_USER_REGISTER_API=http://localhost:4500/register-new-user
+REACT_APP_GOOGLE_REGISTER_API=http://localhost:4500/google-signup
+
+
+
+# admin user login & signup .env
+REACT_APP_ADD_ADMIN_USER_API=http://localhost:4500/add-admin-user
+REACT_APP_GET_ADMIN_USER_API=http://localhost:4500/get-admin-user
