Added new changes

--- a/client/.env
+++ b/client/.env
@@ -35,7 +35,11 @@ REACT_APP_GOOGLE_REGISTER_API=http://localhost:4500/google-signup
 
 
 # admin user login & signup .env
+
+REACT_APP_LOGIN_ADMIN_USER_API=http://localhost:4500/login-admin-user
+
 REACT_APP_ADD_ADMIN_USER_API=http://localhost:4500/add-admin-user
 REACT_APP_GET_ADMIN_USER_API=http://localhost:4500/get-admin-user
 REACT_APP_DELETE_ADMIN_USER_API=http://localhost:4500/delete-admin-user
-REACT_APP__ADMIN_USER_API=http://localhost:4500/delete-admin-user
+REACT_APP_UPDATE_ADMIN_USER_API=http://localhost:4500/update-admin-user
+REACT_APP_ADMIN_USER_BY_ID_API=http://localhost:4500/get-admin-by-id
