Added new changes

--- a/client/.env
+++ b/client/.env
@@ -6,6 +6,10 @@ REACT_APP_GOOGLE_CLIENT_ID=105221638566-rhgasqij89o7919eg3fscbcnoerrqvmn.apps.go
 
 
 
+
+# product status .env
+REACT_APP_UPDATE_PRODUCT_STATUS_API=http://localhost:4500/updatestatus
+
 # products .env
 REACT_APP_GET_API=http://localhost:4500/getallproducts
 REACT_APP_ADD_API=http://localhost:4500/addproducts
