Added new changes

--- a/server/.env
+++ b/server/.env
@@ -12,3 +12,8 @@ URL = http://localhost:4500
 
 EMAIL_USER=saadfaruk786@gmail.com
 EMAIL_PASS=nhqt qxvs onax kukw
+
+
+
+RAZORPAY_KEY_ID=rzp_test_0PsAonKB4n1Cpe
+RAZORPAY_SECRET=pW7faUuNS0eV0YeVG3yBPQN1
