--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^5.0.0-alpha.8",
     "fs": "^0.0.1-security",
@@ -22,6 +23,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.10.0",
     "path": "^0.12.7",
+    "razorpay": "^2.9.6",
     "twilio": "^5.4.5"
   },
   "devDependencies": {
