--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-script": "^2.0.5",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.3",
     "swiper": "^11.2.2",
     "web-vitals": "^4.2.4"
