Initial fullstack setup

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,7 @@
-# REACT_APP_URL=http://localhost:4500
+
+
+
+REACT_APP_API_URL=https://e-commerce-web-lzox.onrender.com
 
 
 # Register google client id .env
@@ -8,53 +11,53 @@ REACT_APP_GOOGLE_CLIENT_ID=105221638566-rhgasqij89o7919eg3fscbcnoerrqvmn.apps.go
 
 
 # product status .env
-REACT_APP_UPDATE_PRODUCT_STATUS_API=http://localhost:4500/updatestatus
+# REACT_APP_UPDATE_PRODUCT_STATUS_API=http://localhost:4500/updatestatus
 
 # products .env
-REACT_APP_GET_API=http://localhost:4500/getallproducts
-REACT_APP_ADD_API=http://localhost:4500/addproducts
-REACT_APP_DELETE_API=http://localhost:4500/deleteproducts/
-REACT_APP_UPDATE_API=http://localhost:4500/updateproducts/
-REACT_APP_GET_BY_ID_API=http://localhost:4500/getproductsbyid/
-REACT_APP_GET_PRO_BY_CATEGORY_API=http://localhost:4500/getproductsbycategory/
+# REACT_APP_GET_API=http://localhost:4500/getallproducts
+# REACT_APP_ADD_API=http://localhost:4500/addproducts
+# REACT_APP_DELETE_API=http://localhost:4500/deleteproducts/
+# REACT_APP_UPDATE_API=http://localhost:4500/updateproducts/
+# REACT_APP_GET_BY_ID_API=http://localhost:4500/getproductsbyid/
+# REACT_APP_GET_PRO_BY_CATEGORY_API=http://localhost:4500/getproductsbycategory/
 
 
 # category .env
-REACT_APP_CATEGORY_API=http://localhost:4500/category
-REACT_APP_ADD_CATEGORY_API=http://localhost:4500/addcategory
-REACT_APP_DELETE_CATEGORY_API=http://localhost:4500/deletecategory
-REACT_APP_UPDATE_CATEGORY_API=http://localhost:4500/updatecategory
-REACT_APP_GET_CATEGORY_BY_ID_API=http://localhost:4500/getCategoryById/
+# REACT_APP_CATEGORY_API=http://localhost:4500/category
+# REACT_APP_ADD_CATEGORY_API=http://localhost:4500/addcategory
+# REACT_APP_DELETE_CATEGORY_API=http://localhost:4500/deletecategory
+# REACT_APP_UPDATE_CATEGORY_API=http://localhost:4500/updatecategory
+# REACT_APP_GET_CATEGORY_BY_ID_API=http://localhost:4500/getCategoryById/
 
 
 # Login .env
-REACT_APP_LOGIN_API=http://localhost:4500/login-user
+# REACT_APP_LOGIN_API=http://localhost:4500/login-user
 
 
 
 # Register .env
-REACT_APP_USER_REGISTER_API=http://localhost:4500/register-new-user
+# REACT_APP_USER_REGISTER_API=http://localhost:4500/register-new-user
 
 # otp .env
-REACT_APP_SEND_OTP_API=http://localhost:4500/send-otp
+# REACT_APP_SEND_OTP_API=http://localhost:4500/send-otp
 
 
 # admin user status .env
-REACT_APP_UPDATE_ADMIN_STATUS=http://localhost:4500/update-admin-status
+# REACT_APP_UPDATE_ADMIN_STATUS=http://localhost:4500/update-admin-status
 
 
 # admin user login & signup .env
 
-REACT_APP_LOGIN_ADMIN_USER_API=http://localhost:4500/login-admin-user
+# REACT_APP_LOGIN_ADMIN_USER_API=http://localhost:4500/login-admin-user
 
-REACT_APP_ADD_ADMIN_USER_API=http://localhost:4500/add-admin-user
-REACT_APP_GET_ADMIN_USER_API=http://localhost:4500/get-admin-user
-REACT_APP_DELETE_ADMIN_USER_API=http://localhost:4500/delete-admin-user
-REACT_APP_UPDATE_ADMIN_USER_API=http://localhost:4500/update-admin-user
-REACT_APP_ADMIN_USER_BY_ID_API=http://localhost:4500/get-admin-by-id
+# REACT_APP_ADD_ADMIN_USER_API=http://localhost:4500/add-admin-user
+# REACT_APP_GET_ADMIN_USER_API=http://localhost:4500/get-admin-user
+# REACT_APP_DELETE_ADMIN_USER_API=http://localhost:4500/delete-admin-user
+# REACT_APP_UPDATE_ADMIN_USER_API=http://localhost:4500/update-admin-user
+# REACT_APP_ADMIN_USER_BY_ID_API=http://localhost:4500/get-admin-by-id
 
 
 # cart item .env
-REACT_APP_CART_ITEM_API=http://localhost:4500/cart-item
+# REACT_APP_CART_ITEM_API=http://localhost:4500/cart-item
 
 
