Initial fullstack setup

--- a/client/.env
+++ b/client/.env
@@ -5,7 +5,7 @@ REACT_APP_API_URL=https://e-commerce-web-lzox.onrender.com
 
 
 # Register google client id .env
-REACT_APP_GOOGLE_CLIENT_ID=105221638566-rhgasqij89o7919eg3fscbcnoerrqvmn.apps.googleusercontent.com
+# REACT_APP_GOOGLE_CLIENT_ID=105221638566-rhgasqij89o7919eg3fscbcnoerrqvmn.apps.googleusercontent.com
 
 
 
