--- a/server/.env
+++ b/server/.env
@@ -2,7 +2,7 @@ PORT = 28006
 
 DB_HOST = switchback.proxy.rlwy.net
 DB_USER = postgres 
-DB_PASSWORD = saad459988
+DB_PASSWORD = bgNseOvzOwImyAyDxFqvPNXrxHIWfAgF
 DB_NAME = railway
 
 URL = http://localhost:4500
