--- a/server/.env
+++ b/server/.env
@@ -1,12 +1,11 @@
-PORT = 28006
+PORT = 5432
 
 DB_HOST = switchback.proxy.rlwy.net
 DB_USER = postgres 
 DB_PASSWORD = bgNseOvzOwImyAyDxFqvPNXrxHIWfAgF
 DB_NAME = railway
 
-URL = http://localhost:4500
-
+URL=https://e-commerce-web-lzox.onrender.com
 
 
 
