--- a/server/.env
+++ b/server/.env
@@ -1,12 +1,19 @@
-PORT = 5432
+# PORT = 5432
 
-DB_HOST = switchback.proxy.rlwy.net
-DB_USER = postgres 
-DB_PASSWORD = bgNseOvzOwImyAyDxFqvPNXrxHIWfAgF
-DB_NAME = railway
+# DB_HOST = switchback.proxy.rlwy.net
+# DB_USER = postgres 
+# DB_PASSWORD = bgNseOvzOwImyAyDxFqvPNXrxHIWfAgF
+# DB_NAME = railway
+
+# URL=https://e-commerce-web-lzox.onrender.com
+PORT=28006
+DB_HOST=switchback.proxy.rlwy.net
+DB_USER=postgres
+DB_PASSWORD=bgNseOvzOwImyAyDxFqvPNXrxHIWfAgF
+DB_NAME=railway
+DB_PORT=5432
 
 URL=https://e-commerce-web-lzox.onrender.com
-
 
 
 EMAIL_USER=saadfaruk786@gmail.com
