Initial fullstack setup

--- a/server/.env
+++ b/server/.env
@@ -22,3 +22,4 @@ EMAIL_PASS=nhqt qxvs onax kukw
 
 RAZORPAY_KEY_ID=rzp_test_0PsAonKB4n1Cpe
 RAZORPAY_SECRET=pW7faUuNS0eV0YeVG3yBPQN1
+RAZORPAY_WEBHOOK_SECRET=s@@d2002
